--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,6 @@
 @import url(./css/index.css);
 @import url(./css/basic/main.css);
+@import url(./css/auth/join.css);
+/* @import url(./css/auth/joinT.css); */
+
 
