--- a/frontend/src/css/basic/main.css
+++ b/frontend/src/css/basic/main.css
@@ -1,3 +1,18 @@
-@import url(./header.css);
 @import url(./reset.css);
+@import url(./header.css);
+@import url(./footer.css);
+
+
+.main {
+  width: 100%;
+  height: calc(100vh - 80px - 80px);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main .main-con {
+  
+}
 
