--- a/frontend/src/css/board/boardWrite.css
+++ b/frontend/src/css/board/boardWrite.css
@@ -68,9 +68,11 @@
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
+  gap: 10px;
 }
 
 .modal-actions button {
+  width: 100%;
   padding: 8px 16px;
   border: none;
   border-radius: 4px;
@@ -83,6 +85,17 @@
 
 .modal-actions button:hover {
   background-color: #ccc;
+}
+
+
+.exit-btn{
+  background-color: red !important;
+  color: white !important;
+  transition: all 0.3s;
+}
+
+.exit-btn:hover{
+  background-color: rgb(197, 0, 0) !important;
 }
 
 .board-write-container {
@@ -146,6 +159,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 .form-group-last .imgView{
@@ -171,6 +185,9 @@
   justify-content: center;
   align-items: center;
 }
+.form-group input{
+  font-weight: bold;
+}
 
 .form-group input,
 .form-group textarea {
@@ -182,13 +199,37 @@
   font-size: 16px;
 }
 
-textarea {
+.form-group textarea {
   height: 350px;
   resize: none;
 }
 
+.last-button{
+  display: flex;
+  gap: 10px;
+}
+
+.cancel{
+  flex: 1;
+  padding: 12px;
+  background: #bebebe;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cancel:hover {
+  background: #888888;
+}
+
 .submit-btn {
-  width: 100%;
+  flex: 1;
   padding: 12px;
   background: #28a745;
   color: white;
@@ -225,4 +266,17 @@ textarea {
 ::-webkit-scrollbar-thumb:hover {
   background: #616161; /* 어두운 파란색 */
   cursor: pointer;
+}
+
+/* input, textarea에 포커스가 있을 때 border 제거 */
+input:focus, textarea:focus {
+  outline: none;
+  border: 0;
+}
+
+/* 오류 메시지 스타일 */
+.error-message {
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
 }
