--- a/frontend/src/css/basic/header.css
+++ b/frontend/src/css/basic/header.css
@@ -9,7 +9,7 @@
 }
 
 .header .header-con {
-  flex: 0 1 1600px;
+  flex: 0 1 1200px;
  
 
 }
@@ -19,20 +19,17 @@
 
   display: flex;
   justify-content: space-between;
-
-  
-}
-
-.header .header-con .gnb h1 {
-  font-weight: bold;
 }
 
 .header .header-con .gnb h1.logo {
-
+  width: 150px;
+  height: 60px;
 }
 
 .header .header-con .gnb h1.logo img {
-
+  width: 100%;
+  height: 60px;
+  display: block;
 }
 
 .header .header-con .gnb > ul {
