--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,7 @@
 @import url(./css/index.css);
 @import url(./css/board/board.css);
 @import url(./css/board/boardWrite.css);
+@import url(./css/auth/join.css);
+@import url(./css/auth/login.css);
 
 
