--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,5 +4,5 @@
 @import url(./css/board/boardWrite.css);
 @import url(./css/auth/join.css);
 @import url(./css/auth/login.css);
-
+@import url(./css/admin/admin.css);
 
