--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,3 +8,4 @@
 @import url(./css/admin/admin.css);
 @import url(./css//member/mentorList.css);
 @import url(./css//member/mentorDetail.css);
+@import url(./css//member/kakaomodify.css);
