--- a/frontend/src/css/member/mentorDetail.css
+++ b/frontend/src/css/member/mentorDetail.css
@@ -2,6 +2,7 @@
   position: sticky;
   top: 0;
   background-color: white;
+  z-index: 1;
 }
 
 .mentorDetail {
@@ -25,12 +26,19 @@
   backdrop-filter: blur(200px);
   padding: 1px 0 1px 370px;
 }
-.mentorDetail .profileImg img {
+.mentorDetail .imgThum {
+  width: 100%;
+  height: 1px;
+}
+.mentorDetail .imgThum img {
   width: 130px;
   height: 130px;
   display: block;
   border-radius: 15px;
   border: 1px solid white;
+  position: relative;
+  top: -140px;
+  left: 365px;
 }
 .mentorDetail-con {
   width: 100%;
