--- a/frontend/src/css/board/boardWrite.css
+++ b/frontend/src/css/board/boardWrite.css
@@ -157,13 +157,13 @@
 
 .form-group-last{
   width: 100%;
+  height: auto;
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
 }
 
 .form-group-last .imgView{
-  width: 200px;
   height: 200px;
   display: flex;
   justify-content: center;
@@ -172,6 +172,7 @@
 
 .form-group-last .imgView img{
   width: 100%;
+  height: 100%;
   display: block;
 }
 
