--- a/frontend/src/css/admin/admin.css
+++ b/frontend/src/css/admin/admin.css
@@ -1,6 +1,7 @@
 @import url(./left.css);
 @import url(./index.css);
 @import url(./member/member.css);
+@import url(./board/board.css);
 
 
 .admin {
