--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,7 @@
 @import url(./css/auth/join.css);
 @import url(./css/auth/login.css);
 @import url(./css/admin/admin.css);
-@import url(./css//member/mentorList.css);
-@import url(./css//member/mentorDetail.css);
-@import url(./css//member/kakaomodify.css);
+@import url(./css/member/mentorList.css);
+@import url(./css/member/mentorDetail.css);
+@import url(./css/member/kakaomodify.css);
+@import url(./css/chatbot.css);
