--- a/frontend/src/css/member/mentorDetail.css
+++ b/frontend/src/css/member/mentorDetail.css
@@ -5,53 +5,69 @@
   z-index: 1;
 }
 
+/* 전체 레이아웃 */
 .mentorDetail {
   width: 100%;
   display: flex;
   flex-direction: column;
   min-height: calc(100vh - 160px);
+  align-items: center;
 }
+
+/* 프로필 배경 */
 .mentorDetail .profileDiv {
-  background-image: url("../../../public/images/mentor.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   width: 100%;
   height: 130px;
   margin-bottom: 40px;
 }
+
+/* 프로필 이미지 블러 효과 */
 .mentorDetail .profileImg {
   width: 100%;
   height: 100%;
-  /* -webkit-backdrop-filter: blur(200px); */
-  backdrop-filter: blur(200px);
-  padding: 1px 0 1px 370px;
+  -webkit-backdrop-filter: blur(100px);
+  backdrop-filter: blur(100px);
+  padding: 1px;
 }
+
+/* 프로필 썸네일 */
 .mentorDetail .imgThum {
   width: 100%;
   height: 1px;
 }
+
 .mentorDetail .imgThum img {
   width: 130px;
   height: 130px;
   display: block;
   border-radius: 15px;
   border: 1px solid white;
+  background-color: white;
   position: relative;
+  left: 420px;
   top: -140px;
-  left: 365px;
 }
+
+/* 컨텐츠 영역 */
 .mentorDetail-con {
   width: 100%;
+  max-width: 1100px;
   display: flex;
   gap: 30px;
-  padding: 0 370px;
+  padding: 0 20px;
 }
+
 .mentorDetail-con .mentor-detail {
   flex: 3;
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
+
+/* 사이드바 (결제 영역) */
 .mentorDetail-con .mentor-pay {
   position: sticky;
   top: 98px;
@@ -59,41 +75,75 @@
   height: 250px;
   border: 1px solid #ddd;
   border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: bold;
+  justify-content: flex-end;
+  padding: 20px 0;
+  gap: 15px;
 }
-.mentorDetail-con .mentor-detail ul {
+
+/* 버튼 스타일 */
+.mentorDetail-con .mentor-pay .mentor-btn1,
+.mentorDetail-con .mentor-pay .mentor-btn2 {
+  width: 85%;
+  height: 40px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+}
+
+.mentorDetail-con .mentor-pay .mentor-btn1 {
+  border: 1px solid #ddd;
+  color: #00c7ae;
+}
+
+.mentorDetail-con .mentor-pay .mentor-btn2 {
+  background-color: #00c7ae;
+  color: white;
+}
+
+/* 고정된 메뉴 */
+.mentorDetail-con .mentor-detail ul.info {
+  background-color: white;
   position: sticky;
   top: 80px;
   display: flex;
   font-weight: bold;
   border-bottom: 1px solid #ddd;
-  padding: 18px 0;
   gap: 15px;
 }
+
+/* 멘토 정보 영역 */
 .mentorDetail-con .mentor-detail .mentorInfo {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
-.mentorDetail-con .mentor-detail .mentorInfo ul li {
+
+/* 리스트 스타일 */
+.mentorDetail-con .mentor-detail ul.info li {
+  height: 100%;
+  padding: 18px 0;
   cursor: pointer;
 }
-.mentorDetail-con .mentor-detail .mentorInfo .mentorDetails {
-  width: 500px;
-  height: 500px;
+ul.info li.active {
+  color: #00c7ae;
+  font-weight: bold;
+  border-bottom: 2px solid #00c7ae;
 }
-.mentorDetail-con .mentor-detail .mentorInfo .mentorItems {
-  width: 500px;
-  height: 500px;
-}
-.mentorDetail-con .mentor-detail .mentorInfo .mentorPortfolios {
-  width: 500px;
-  height: 500px;
-}
-.mentorDetail-con .mentor-detail .mentorInfo .mentorImg {
-  width: 500px;
-  height: 500px;
-}
+
+/* 공통 스타일 적용 */
+.mentorDetail-con .mentor-detail .mentorInfo .mentorDetails,
+.mentorDetail-con .mentor-detail .mentorInfo .mentorItems,
+.mentorDetail-con .mentor-detail .mentorInfo .mentorPortfolios,
+.mentorDetail-con .mentor-detail .mentorInfo .mentorImg,
 .mentorDetail-con .mentor-detail .mentorInfo .mentorReview {
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  min-height: 500px;
+  border-bottom: 1px solid #ddd;
+  padding: 30px 0;
 }
