--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,3 +10,5 @@
 @import url(./css/member/mentorDetail.css);
 @import url(./css/member/kakaomodify.css);
 @import url(./css/chatbot.css);
+@import url(./css/member/memberDetail.css);
+@import url(./css/item/item.css);
