--- a/frontend/src/css/auth/join.css
+++ b/frontend/src/css/auth/join.css
@@ -9,16 +9,17 @@
 
 .join-con {
   background-color: white;
-  padding: 40px 50px;
+  padding: 30px 50px;
   box-sizing: border-box;
   border-radius: 20px;
   border: 0.1px solid rgb(214, 214, 214);
   width: 650px;
+  margin-bottom: 10px;
 }
 
 .join-header {
   text-align: center;
-  margin-bottom: 20px;
+  
 }
 
 .join-header h1 {
@@ -29,6 +30,7 @@
 .join-header h1 img{
   width: 100%;
   display: block;
+  cursor: pointer;
 }
 
 .join-choice {
