--- a/frontend/src/css/auth/login.css
+++ b/frontend/src/css/auth/login.css
@@ -14,7 +14,7 @@
   border-radius: 20px;
   border: 0.1px solid rgb(214, 214, 214);
   width: 550px;
-  margin-bottom: 20vh;
+  margin-bottom: 10px;
 }
 
 .login-header{
@@ -32,6 +32,7 @@
 .login-header h1 img{
   width: 100%;
   display: block;
+  cursor: pointer;
 }
 
 .login-con .login-container {
@@ -60,18 +61,69 @@
 
 .login-con .login-footer {
   width: 100%;
-  margin-top: 30px;
+  height: 50px;
+  margin-top: 10px;
   padding: 10px 12px;
   box-sizing: border-box;
   background-color: #00b62a;
   color: white;
   border: none;
   border-radius: 8px;
-  cursor: pointer;
   transition: all 0.3s;
+  font-size: 18px;
+  font-weight: bold;
 }
 
+.login-con .login-footer-kakao{
+  width: 100%;
+  border: 0;
+  border-radius: 8px;
+  margin-top: 10px;
+}
+
+.flex.flex-col{
+  width: 100%;
+  height: 100%;
+}
+
+.text-3xl{
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  display: flex;
+}
+
+.text-3xl a{
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  display: flex;
+}
+
+.text-3xl a img{
+  width: 100%;
+  height: 50px;
+}
 
 .login-con .login-footer:hover {
   background-color: #0f942c;
+}
+
+.join-navigate{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-size: 16px;
+}
+
+.join-navigate .join-navigate-span{
+  color: rgb(76, 202, 185);
+  cursor: pointer;
+  font-weight: bold;
 }
