--- a/frontend/src/css/board/board.css
+++ b/frontend/src/css/board/board.css
@@ -57,6 +57,7 @@
   width: 100px;
   height: 100px;
   border-radius: 20%;
+  background-color: #f5f5f5;
 }
 
 .profile img{
@@ -81,7 +82,7 @@
 
 .age,
 .address {
-  width: 53px;
+  width: 70px;
   height: 20px;
   box-sizing: border-box;
   font-size: 14px;
