--- a/frontend/src/css/admin/board/board.css
+++ b/frontend/src/css/admin/board/board.css
@@ -3,103 +3,135 @@
   flex: 1;
   height: calc(100vh - 80px);
 
-}
-
-.admin-board .admin-board-con {
-  width: 100%;
-  height: inherit;
-
   display: flex;
   justify-content: center;
   align-items: center;
 
 }
 
-.admin-board .admin-board-con .admin-board-left {
-  flex: 1;
+.admin-board .admin-board-con {
+  flex: 0 1 1400px;
+  height: inherit;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
-  gap: 20px;
+  /* border: 1px solid #f0f; */
 
-  border: 1px solid #00f;
+  gap: 30px;
+  box-sizing: border-box;
+
+  padding: 20px 0;
+  box-sizing: border-box;
 }
 
-.admin-board .admin-board-con .admin-board-left .admin-board-left-header {
+
+.admin-board .admin-board-con .admin-board-search {
+
   width: 100%;
-}
+  /* border: 1px solid #2be28d; */
+  /* border-radius: 10px; */
+  box-sizing: border-box;
 
-.admin-board .admin-board-con .admin-board-left .admin-board-left-header > ul {
   display: flex;
   justify-content: center;
-  align-items: center;
-  gap: 10px;
-
-  padding: 10px;
-  box-sizing: border-box;
 }
 
-.admin-board .admin-board-con .admin-board-left .admin-board-left-header > ul > li {
-  flex: 1;
-  
-
-  border: 1px solid #00f;
-
-  
-
-  
-
-}
-
-
-
-.admin-board .admin-board-con .admin-board-left .board-pocket {
-
-  width: 100%;
-
-  border: 1px solid #00f;
-
-  cursor: pointer;
- 
-}
-
-.admin-board .admin-board-con .admin-board-left .board-pocket > ul {
+.admin-board .admin-board-con .admin-board-search form {
+  flex: 0 1 1000px;
 
   display: flex;
-  gap: 10px;
+  
 
-  padding: 10px;
+  /* border: 5px solid #e22b2b; */
+}
+
+.admin-board .admin-board-con .admin-board-search form select {
+  flex: 1;
+  
+  border: 2px solid #2be28d;
+}
+
+.admin-board .admin-board-con .admin-board-search form input {
+  flex: 5;
+
+  font-size: 30px;
+
+  border: 0;
+}
+
+.admin-board .admin-board-con .admin-board-search form input:focus {
+  outline: none;
+  box-shadow: none !important;
+}
+
+.admin-board .admin-board-con .admin-board-search form button {
+
+  flex: 1;
+
+  border: 2px solid #2be28d;
+
+  background-color: #fff;
+
+  cursor: pointer;
+}
+
+
+.admin-board .admin-board-con .admin-board-list {
+  width: 100%;
+  height: 800px;
+  /* border: 1px solid rgb(17, 0, 255); */
+
+}
+
+.admin-board .admin-board-con .admin-board-list .admin-board-head > ul {
+  padding: 20px;
+  box-shadow: inset -1px -1px 3px rgb(59, 59, 59);
+  border-radius: 5px;
+  box-sizing: border-box;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+.admin-board .admin-board-con .admin-board-list .admin-board-head > ul > li {
+  flex: 1;
+}
+
+.admin-board .admin-board-con .admin-board-list .admin-board-body .board-pocket {
+  padding: 15px 0;
+  box-sizing: border-box;
+}
+
+.admin-board .admin-board-con .admin-board-list .admin-board-body .board-pocket > ul {
+  display: flex;
+  justify-content: space-between;
+
+  box-shadow: inset -1px -1px 3px rgb(59, 59, 59);
+  border-radius: 10px;
+
+  box-sizing: border-box;
+
+  transition: all 0.4s;
+  
+  cursor: pointer;
+
+  padding: 20px;
   box-sizing: border-box;
 
 }
 
-.admin-board .admin-board-con .admin-board-left .board-pocket > ul > li {
+.admin-board .admin-board-con .admin-board-list .admin-board-body .board-pocket > ul:hover {
+  transform: translate(-7px, -7px); /* 이동 */
+}
+
+.admin-board .admin-board-con .admin-board-list .admin-board-body .board-pocket > ul > li {
   flex: 1;
-  border: 1px solid #00f;
-}
-
-.admin-board .admin-board-con .admin-board-right {
-  flex: 1;
-
-  border: 1px solid #f00;
-}
-
-.admin-board .admin-board-con .admin-board-right .admin-board-result {
-  height: 600px;
-}
-
-.admin-board .admin-board-con .admin-board-right .admin-board-result > form > ul > li .admin-board-img {
-
-  width: 200px;
-  height: 200px;
-}
-
-.admin-board .admin-board-con .admin-board-right .admin-board-result > form > ul > li .admin-board-img img {
-
-  width: 100%;
-  display: block;
 
 }
+
+
+
+
