--- a/frontend/src/css/admin/admin.css
+++ b/frontend/src/css/admin/admin.css
@@ -2,6 +2,11 @@
 @import url(./index.css);
 @import url(./member/member.css);
 @import url(./board/board.css);
+@import url(./board//boardDetail.css);
+@import url(./item/item.css);
+@import url(./item/itemDetail.css);
+@import url(./cart/cart.css);
+@import url(./cart/cartDetail.css);
 
 
 .admin {
@@ -32,6 +37,9 @@
   /* border: 1px solid #f00; */
   box-shadow: inset -1px -1px 2px #cccccc;
   box-sizing: border-box;
+
+  position: sticky;
+  top: 0;
 }
 
 .admin .admin-con .admin-page .admin-header > ul {
