--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,3 +12,4 @@
 @import url(./css/chatbot.css);
 @import url(./css/member/memberDetail.css);
 @import url(./css/item/item.css);
+@import url(./css/inquiry/inquiry.css);
