--- a/frontend/src/css/member/memberDetail.css
+++ b/frontend/src/css/member/memberDetail.css
@@ -181,13 +181,14 @@ input[type="file"] {
 }
 
 .myItemList li {
+  display: flex;
+  justify-content: space-between;
   background: #fff;
   border: 1px solid #ddd;
   border-radius: 10px;
   padding: 15px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-  cursor: pointer;
 }
 
 .myItemList li:hover {
@@ -210,7 +211,25 @@ input[type="file"] {
   font-weight: normal;
   color: #666;
 }
-
+.myItemList li .itemB {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  flex-direction: column;
+}
+.myItemList li .itemB button {
+  border: none;
+  background-color: #00c7ae;
+  padding: 2px 5px;
+  border-radius: 5px;
+  color: white;
+  transition: all 0.3s ease-in-out;
+}
+.myItemList li .itemB button:hover {
+  background-color: #008f7a;
+  cursor: pointer;
+}
 .myItemContainer,
 .myBoardCon {
   width: 100%;
@@ -358,4 +377,39 @@ input[type="file"] {
   color: white;
   font-weight: bold;
   box-shadow: 0 2px 5px rgba(0, 199, 174, 0.5);
+}
+.ItemUpdateModal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* 어두운 배경 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* 다른 콘텐츠 위에 표시 */
+}
+
+.ItemUpdateModal-con {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px;
+  max-width: 100%;
+  position: relative;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.modal-content {
+  padding: 20px;
+  text-align: center;
 }
