--- a/frontend/src/css/basic/main.css
+++ b/frontend/src/css/basic/main.css
@@ -2,11 +2,179 @@
   width: 100%;
 }
 
-.main .slogan{
+.main-con{
   width: 100%;
 }
 
-.main .slogan img{
+.main .main-con .slogan{
+  width: 100%;
+}
+
+.main .main-con .slogan img{
   width: 100%;
   display: block;
+}
+
+.main-container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-container .main-section1{
+  width: 100%;
+  padding: 120px 0;
+}
+
+.main-container .main-section1 .section1-con{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-container .main-section1 .section1-con .section1-top{
+  width: 100%;
+  text-align: center;
+}
+
+.main-container .main-section1 .section1-con .section1-top h1{
+  font-size: 36px;
+  color: #242424;
+}
+
+.main-container .main-section1 .section1-con .section1-top span{
+  display: block;
+  margin-top: 12px;
+  font-size: 20px;
+  color: #5d5d5d;
+  font-weight: 500;
+}
+
+.main-container .main-section1 .section1-con .section1-bottom{
+  width: 100%;
+  margin-top: 58px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-container .main-section1 .section1-con .section1-bottom ul{
+  display: flex;
+  gap: 70px;
+}
+
+.main-container .main-section1 .section1-con .section1-bottom ul li{
+  width: 175.8px;
+  height: 224px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 20px;
+  box-sizing: border-box;
+}
+
+.main-container .main-section1 .section1-con .section1-bottom ul li .bottom-top{
+  width: 80px;
+  height: 80px;
+}
+
+.main-container .main-section1 .section1-con .section1-bottom ul li .bottom-top img{
+  width: 100%;
+  display: block;
+}
+
+.main-container .main-section1 .section1-con .section1-bottom ul li .bottom-bottom{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-container .main-section1 .section1-con .section1-bottom ul li .bottom-bottom span{
+  margin-top: 24px;
+  font-size: 16px;
+  color: #808080;
+}
+
+.main-container .main-section1 .section1-con .section1-bottom ul li .bottom-bottom h1{
+  font-size: 24px;
+  margin-top: 4px;
+  color: #5d5d5d;
+}
+
+.main-section2{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 120px;
+  padding-bottom: 60px;
+  background-color: rgb(248 248 248);
+}
+
+.main-section2 .section2-con{
+  width: 1000px;
+}
+
+.section2-con .section2-top{
+  width: 100%;
+}
+
+.section2-con .section2-top h1{
+  color: rgb(36 36 36);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 46px;
+}
+
+.section2-con .section2-top span{
+  color: rgb(93 93 93);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
+  margin-top: 12px;
+  display: block;
+}
+
+.section2-con .section2-bottom{
+  padding-top: 120px;
+}
+
+.section2-con .section2-bottom span{
+  width: 100%;
+  display: block;
+  padding: 1.25rem;
+  background-color: rgb(240 240 240);
+  border-radius: 16px;
+  color: rgb(68 68 68);
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+}
+
+.section2-con .section2-bottom span img{
+  width: 15px;
+  height: 15px;
+}
+
+.main-section3{
+  font-family: 'Noto Sans KR', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 120px 0;
+}
+
+.main-section3 h1.index-title-1{
+  width: 1000px;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.5;
+  display: flex;
+  margin-bottom: 60px;
 }
