--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
 @import url(./css/index.css);
 @import url(./css/basic/main.css);
 @import url(./css/board/board.css);
@@ -13,3 +14,7 @@
 @import url(./css/member/memberDetail.css);
 @import url(./css/item/item.css);
 @import url(./css/inquiry/inquiry.css);
+
+body {
+  font-family: 'Noto Sans KR', sans-serif;
+}
