--- a/frontend/src/css/basic/main.css
+++ b/frontend/src/css/basic/main.css
@@ -24,6 +24,7 @@
 .main-container .main-section1{
   width: 100%;
   padding: 120px 0;
+  box-sizing: border-box;
 }
 
 .main-container .main-section1 .section1-con{
@@ -66,7 +67,7 @@
 }
 
 .main-container .main-section1 .section1-con .section1-bottom ul li{
-  width: 175.8px;
+  width: 180px;
   height: 224px;
   display: flex;
   flex-direction: column;
@@ -113,15 +114,21 @@
   align-items: center;
   padding-top: 120px;
   padding-bottom: 60px;
+  box-sizing: border-box;
   background-color: rgb(248 248 248);
 }
 
 .main-section2 .section2-con{
-  width: 1000px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .section2-con .section2-top{
-  width: 100%;
+  width: 1000px;
 }
 
 .section2-con .section2-top h1{
@@ -140,14 +147,94 @@
   display: block;
 }
 
+@keyframes scroll {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-50%);
+  }
+}
+
+.section2-mid {
+  position: relative;
+  width: 100vw;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+.review-list {
+  width: max-content;
+  display: flex;
+  animation: scroll 30s linear infinite;
+  padding-top: 40px;
+  padding-bottom: 10px;
+  box-sizing: border-box;
+}
+
+.review-item {
+  width: 315px;
+  padding: 20px;
+  box-sizing: border-box;
+  margin-left: 36px;
+  border-radius: 12px;
+  background-color: rgb(255 255 255);
+  cursor: pointer;
+  box-shadow: 0 5px 10px #ccc;
+}
+
+.review-item .review-header{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.review-item .review-header img{
+  width: 40px;
+  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
+  max-width: 40px;
+  max-height: 40px;
+  border-radius: 50%;
+}
+
+.review-item .review-header .review-info{
+  width: 100%;
+  color: #808080;
+}
+
+.review-item .review-header .review-info .line{
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #e5e7eb;
+}
+
+.review-item .review-mentor{
+  margin-top: 10px;
+  color: rgb(20 219 186);
+}
+
+.review-item .review-content{
+  margin-top: 10px;
+  font-size: 14px;
+  color: #808080;
+}
+
+
 .section2-con .section2-bottom{
+  width: 1000px;
   padding-top: 120px;
+  box-sizing: border-box;
 }
 
 .section2-con .section2-bottom span{
   width: 100%;
   display: block;
   padding: 1.25rem;
+  box-sizing: border-box;
   background-color: rgb(240 240 240);
   border-radius: 16px;
   color: rgb(68 68 68);
@@ -168,6 +255,7 @@
   align-items: center;
   flex-direction: column;
   padding: 120px 0;
+  box-sizing: border-box;
 }
 
 .main-section3 h1.index-title-1{
