--- a/frontend/src/css/board/boardDetail.css
+++ b/frontend/src/css/board/boardDetail.css
@@ -41,13 +41,16 @@
 
 .detail-container .detail-top .detail-profile .detail-profile-left{
   height: 80px;
+  min-width: 80px;
   max-width: 120px;
   background-color: #f5f5f5;
   border-radius: 20%;
+  overflow: hidden;
 }
 
 .detail-container .detail-top .detail-profile .detail-profile-left img{
   height: 100%;
+  min-width: 100%;
   max-width: 100%;
   display: block;
 }
@@ -216,6 +219,7 @@
   height: 40px;
   border-radius: 50%;
   margin-right: 12px;
+  background-color: #f5f5f5;
 }
 
 .reply-info {
@@ -255,6 +259,7 @@
 }
 
 .detail-reply-list{
+  min-height: 400px;
   padding: 10px 0;
   box-sizing: border-box;
 }
