--- a/frontend/src/css/basic/main.css
+++ b/frontend/src/css/basic/main.css
@@ -193,15 +193,11 @@
 .review-item .review-header img{
   width: 40px;
   height: 40px;
-  min-width: 40px;
-  min-height: 40px;
-  max-width: 40px;
-  max-height: 40px;
   border-radius: 50%;
 }
 
 .review-item .review-header .review-info{
-  width: 100%;
+  flex: 1;
   color: #808080;
 }
 
