--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,7 @@
 @import url(./css/member/memberDetail.css);
 @import url(./css/item/item.css);
 @import url(./css/inquiry/inquiry.css);
+@import url(./css/work24/work24.css);
 
 body {
   font-family: 'Noto Sans KR', sans-serif;
