--- a/frontend/src/css/board/board.css
+++ b/frontend/src/css/board/board.css
@@ -51,6 +51,10 @@
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .profile {
@@ -58,13 +62,19 @@
   height: 100px;
   border-radius: 20%;
   background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .profile img{
+  height: 100%;
   width: 100%;
-  height: auto;
+  object-fit: cover;
   display: block;
 }
+
 
 .nickName {
   margin-top: 10px;
