--- a/frontend/src/css/board/boardDetail.css
+++ b/frontend/src/css/board/boardDetail.css
@@ -41,22 +41,24 @@
 
 .detail-container .detail-top .detail-profile .detail-profile-left{
   height: 80px;
-  min-width: 80px;
-  max-width: 120px;
+  width: 80px;
   background-color: #f5f5f5;
   border-radius: 20%;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .detail-container .detail-top .detail-profile .detail-profile-left img{
   height: 100%;
-  min-width: 100%;
-  max-width: 100%;
+  width: 100%;
+  object-fit: cover;
   display: block;
 }
 
 .detail-container .detail-top .detail-profile .detail-profile-right{
-  width: 100%;
+  flex: 1;
   padding: 10px;
   box-sizing: border-box;
   display: flex;
