--- a/frontend/src/css/member/mentorList.css
+++ b/frontend/src/css/member/mentorList.css
@@ -83,6 +83,7 @@
 .mentorList .mentorList-con .mentor-list .mentor .left img {
   width: 100%;
   display: block;
+  object-fit: cover;
   background-color: #f5f5f5;
   border-radius: 10px;
   color: white;
