--- a/frontend/src/css/chatbot.css
+++ b/frontend/src/css/chatbot.css
@@ -232,6 +232,7 @@
   width: 100%;
   height: 100%;
   display: block;
+  object-fit: cover;
 }
 
 .data-con.bot > div .message .message-mentorList .mentorList-langk .mentorList-langk-top .mentorList-langk-nickName{
@@ -263,13 +264,19 @@
 
 .data-con.bot > div .message .message-mentor .message-mentor-top{
   display: flex;
-  
 }
 
-.data-con.bot > div .message .message-mentor .message-mentor-top img{
+.data-con.bot > div .message .message-mentor .message-mentor-top .message-left{
   flex: 1;
   width: 80px;
   height: 80px;
+}
+
+.data-con.bot > div .message .message-mentor .message-mentor-top img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 .data-con.bot > div .message .message-mentor .message-mentor-top .message-mentor-nickName{
