--- a/frontend/src/css/member/mentorDetail.css
+++ b/frontend/src/css/member/mentorDetail.css
@@ -253,7 +253,7 @@ ul.info li.active {
 
 .nopt{
   width: 100%;
-  height: 100%;
+  margin-top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
