--- a/frontend/src/css/member/memberDetail.css
+++ b/frontend/src/css/member/memberDetail.css
@@ -213,7 +213,7 @@ input[type="file"] {
 }
 .myItemList li .itemB {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   gap: 10px;
 }
@@ -415,20 +415,20 @@ input[type="file"] {
   text-align: center;
 }
 
-.review-click{
+.review-click {
   cursor: pointer;
 }
 
-.mentorInfo{
+.mentorInfo {
   width: 100%;
   min-height: 100%;
 }
 
-.mentorInfo .mentorInfo-top{
+.mentorInfo .mentorInfo-top {
   width: 100%;
 }
 
-.mentorInfo .mentorInfo-top form textarea{
+.mentorInfo .mentorInfo-top form textarea {
   margin-top: 10px;
   width: 100%;
   height: 600px;
@@ -440,13 +440,13 @@ input[type="file"] {
   resize: none;
 }
 
-.mentorInfo .mentorInfo-top form div{
+.mentorInfo .mentorInfo-top form div {
   width: 100%;
   display: flex;
   justify-content: flex-end;
 }
 
-.mentorInfo .mentorInfo-top form div button{
+.mentorInfo .mentorInfo-top form div button {
   margin-top: 10px;
   border: none;
   padding: 10px 20px;
@@ -458,34 +458,34 @@ input[type="file"] {
   transition: all 0.3s;
 }
 
-.mentorInfo .mentorInfo-top form div button:hover{
+.mentorInfo .mentorInfo-top form div button:hover {
   transform: translateY(-2px);
   box-shadow: 0 2px 5px rgba(0, 199, 174, 0.5);
 }
 
-.mentorInfo .mentorInfo-bottom{
+.mentorInfo .mentorInfo-bottom {
   width: 100%;
   margin-top: 40px;
 }
 
-.mentorInfo .mentorInfo-bottom form{
+.mentorInfo .mentorInfo-bottom form {
   width: 100%;
 }
 
-.mentorInfo .mentorInfo-bottom form .pt{
+.mentorInfo .mentorInfo-bottom form .pt {
   min-height: 200px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.mentorInfo .mentorInfo-bottom form .butt{
+.mentorInfo .mentorInfo-bottom form .butt {
   width: 100%;
   display: flex;
   justify-content: flex-end;
 }
 
-.mentorInfo .mentorInfo-bottom form .butt button{
+.mentorInfo .mentorInfo-bottom form .butt button {
   margin-top: 10px;
   border: none;
   padding: 10px 20px;
@@ -497,19 +497,19 @@ input[type="file"] {
   transition: all 0.3s;
 }
 
-.mentorInfo .mentorInfo-bottom form .butt button:hover{
+.mentorInfo .mentorInfo-bottom form .butt button:hover {
   transform: translateY(-2px);
   box-shadow: 0 2px 5px rgba(0, 199, 174, 0.5);
 }
 
-.mentorInfo .mentorInfo-bottom form .pt .ptView{
+.mentorInfo .mentorInfo-bottom form .pt .ptView {
   height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.mentorInfo .mentorInfo-bottom form .pt .ptView img{
+.mentorInfo .mentorInfo-bottom form .pt .ptView img {
   width: 100%;
   height: 100%;
   display: block;
