--- a/frontend/src/css/member/mentorDetail.css
+++ b/frontend/src/css/member/mentorDetail.css
@@ -251,6 +251,19 @@ ul.info li.active {
   justify-content: center;
 }
 
+.mentorDetail-con .mentor-detail .mentorInfo .mentorPortfolios div{
+  width: 100%;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mentorDetail-con .mentor-detail .mentorInfo .mentorPortfolios div img{
+  width: 100%;
+  display: block;
+}
+
 .nopt{
   width: 100%;
   margin-top: 20px;
@@ -319,12 +332,82 @@ ul.info li.active {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  cursor: pointer;
   transition: all 0.3s;
   padding-bottom: 20px;
   padding-right: 10px;
+  gap: 10px;
 }
 
-.review ul li .review-body div:hover{
+.review ul li .review-body div span{
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.review ul li .review-body div span:first-child:hover{
+  color: blue;
+}
+
+.review ul li .review-body div span:hover{
   color: red;
+}
+
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 600px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.modal-content textarea{
+  width: 100%;
+  height: 300px;
+  border: 0;
+  margin-top: 20px;
+  resize: none;
+  border-radius: 8px;
+  box-shadow: 0 0 3px #ccc;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.modal-actions {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.modal-actions button {
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.modal-actions button:hover{
+  background-color: #3b8b3d;
+}
+
+.modal-actions button:nth-child(2) {
+  background-color: #f44336;
+}
+
+.modal-actions button:nth-child(2):hover{
+  background-color: #bd332a;
 }
