--- a/frontend/src/css/admin/board/board.css
+++ b/frontend/src/css/admin/board/board.css
@@ -28,6 +28,7 @@
 }
 
 
+/* 검색 창 */
 .admin-board .admin-board-con .admin-board-search {
 
   width: 100%;
@@ -79,6 +80,8 @@
 }
 
 
+
+/* 리스트  */
 .admin-board .admin-board-con .admin-board-list {
   width: 100%;
   height: 800px;
@@ -101,7 +104,7 @@
 }
 
 .admin-board .admin-board-con .admin-board-list .admin-board-body .board-pocket {
-  padding: 15px 0;
+  padding-top: 15px;
   box-sizing: border-box;
 }
 
