--- a/frontend/src/css/admin/board/boardDetail.css
+++ b/frontend/src/css/admin/board/boardDetail.css
@@ -46,10 +46,12 @@
 
 }
 
+
 .board-detail .board-detail-con > form > .board-detail-head > .admin-board-detail-btns {
   display: flex;
   gap: 30px;
 }
+
 
 .board-detail .board-detail-con > form > .board-detail-head > .admin-board-detail-btns span {
   /* border: 2px solid #f00; */
@@ -57,7 +59,7 @@
 
   font-size: 30px;
   color: #fff;
-  background-color: rgb(37, 243, 147);
+  background-color: #50db7a;
 
   padding: 10px 20px;
   box-sizing: border-box;
@@ -80,6 +82,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  gap: 10px;
+}
+
+
+.board-detail .board-detail-con > form > .board-detail-body > .board-detail-update > span {
+  cursor: pointer;
 }
 
 
@@ -96,19 +105,35 @@
 
   resize: none; /* textarea 고정 */
 
+  border-radius: 5px;
+  border: 2px solid #ccc;
+  box-sizing: border-box;
+
+  font-size: 16px;
 }
 
 .board-detail .board-detail-con > form > .board-detail-body > .board-detail-infos {
   flex: 2;
 
-  /* border: 1px solid #f00; */
+  border-radius: 10px;
+  box-shadow: inset 0 0 3px #686868;
+  padding: 10px 30px;
+  box-sizing: border-box;
+}
+
+.board-detail .board-detail-con > form > .board-detail-body > .board-detail-infos > ul {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .board-detail .board-detail-con > form > .board-detail-body > .board-detail-infos > ul > li {
 
   display: flex;
 
-  padding-right: 20px;
+  
+  
+  padding: 5px 0;
   box-sizing: border-box;
 
 }
@@ -116,13 +141,22 @@
 .board-detail .board-detail-con > form > .board-detail-body > .board-detail-infos > ul > li label {
 
   flex: 1;
-  border: 0;
+  
+
+  padding: 10px 0;
+  box-sizing: border-box;
 }
 
 .board-detail .board-detail-con > form > .board-detail-body > .board-detail-infos > ul > li input {
 
-  flex: 1;
-  border: 0;
+  flex: 2;
+
+  border-radius: 5px;
+  border: 2px solid #686868;
+  text-indent: 5px; /* 글머리 공백*/
+
+  padding: 10px 0;
+  box-sizing: border-box;
 }
 
 .board-detail .board-detail-con > form > .board-detail-body > .board-detail-infos > ul > li .admin-board-img {
