--- a/frontend/src/css/admin/cart/cart.css
+++ b/frontend/src/css/admin/cart/cart.css
@@ -20,10 +20,12 @@
 
   /* border: 1px solid #f00; */
 
- 
-
 
   position: relative;
+
+  padding: 20px 0;
+  box-sizing: border-box;
+  
 }
 
 
@@ -77,7 +79,9 @@
 
 }
 
-
+.admin-cart .admin-cart-con .admin-cart-list .item-pocket > ul {
+  border-bottom: 2px solid rgb(212, 211, 211);
+}
 
 
 
@@ -100,6 +104,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  background-color: rgba(53, 50, 50, 0.692);  
 }
 
 .admin-cart-modal-con {
@@ -115,9 +121,11 @@
   justify-content: center;
   align-items: center;
 
-  border: 5px solid #51e0a4;
- 
-  padding: 40px 0;
+  
+  
+  box-shadow: inset -1px -1px 2px rgb(46, 46, 46);
+
+  padding: 40px 50px;
   border-radius: 10px;
   box-sizing: border-box;
 
@@ -132,7 +140,7 @@
   display: flex;
   justify-content: space-between;
 
-  border: 1px solid #f00;
+  /* border: 1px solid #f00; */
 }
 
 .admin-cart-modal-con > .admin-cart-modal-wrap .item-select {
@@ -146,17 +154,20 @@
 }
 
 .admin-cart-modal-con > .admin-cart-modal-wrap .item-select > ul {
-  border: 1px solid #f00;
+
+  padding: 10px;
+  border: 1px solid #000;
+  box-sizing: border-box;
 
   height: 300px;
 
-  overflow: auto;
+  overflow-y: auto;
 }
 
 .admin-cart-modal-con > .admin-cart-modal-wrap .item-select > ul > li.admin-cart-modal-pocket {
   /* height: 50px; */
 
-  border: 1px solid #00f;
+  border: 1px solid #000;
 
   padding: 5px;
   box-sizing: border-box;
@@ -176,7 +187,7 @@
 .admin-cart-modal-con > .admin-cart-modal-wrap .cart-insert {
   flex: 1;
 
-  border: 1px solid salmon;
+  border: 1px solid #000;
 }
 
 
