--- a/frontend/src/css/admin/cart/cartDetail.css
+++ b/frontend/src/css/admin/cart/cartDetail.css
@@ -17,9 +17,11 @@
   justify-content: center;
   align-items: center;
 
-  border: 1px solid rgb(255, 25, 0);
+  /* border: 1px solid rgb(255, 25, 0); */
 
   position: relative;
+
+  
 }
 
 .admin-cart-detail-back {
@@ -36,17 +38,34 @@
   box-sizing: border-box;
 
   position: absolute;
-  top: 0;
+  top: 10%;
   left: 0;
 }
 
 
 .admin-cart-detail-con .admin-itemsList-list {
-  width: 100%;
+  overflow-y: auto;
 
+  width: 100%;
+  height: 600px;
+
+  padding: 0 50px 50px 50px;
   border: 1px solid #000;
+  box-sizing: border-box;
+
 }
 
 .admin-cart-detail-con .admin-itemsList-list .item-pocket {
-  border: 1px solid #f00;
+  padding-top: 50px;
+  box-sizing: border-box;
+}
+
+.admin-cart-detail-con .admin-itemsList-list .item-pocket > ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  padding: 10px;
+  border: 1px solid #000;
+  box-sizing: border-box;
 }
