--- a/frontend/src/css/admin/item/item.css
+++ b/frontend/src/css/admin/item/item.css
@@ -21,9 +21,9 @@
 
   /* gap: 30px;
   box-sizing: border-box; */
-/* 
+
   padding: 20px 0;
-  box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 .admin-item .admin-item-con .admin-item-list {
