--- a/frontend/src/css/admin/member/member.css
+++ b/frontend/src/css/admin/member/member.css
@@ -14,49 +14,141 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  padding: 20px 0;
+  box-sizing: border-box;
+  
 }
 
-.admin-member .admin-member-con > ul {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-  grid-auto-rows: auto;
-  gap: 5vmin;
+
+
+
+
+
+/* search */
+
+.admin-member .admin-member-con .admin-member-search {
+
+  width: 100%;
+  /* border: 1px solid #2be28d; */
+  /* border-radius: 10px; */
+  box-sizing: border-box;
+
+  display: flex;
+  justify-content: center;
 
   
 }
 
-.admin-member .admin-member-con > ul > li {
-
- 
-  border-radius: 15px;
-  box-sizing: border-box;
-
-  overflow: hidden;
-}
-
-
-/* ul > li 회원 정보 칸   */
-
-.member-pocket .member-pocket-top h1.member-pocket-name {
-  background-color: rgb(87, 255, 205);
-  color: #fff;
+.admin-member .admin-member-con .admin-member-search form {
+  flex: 0 1 1000px;
 
   display: flex;
-  justify-content: center;
+  
 }
 
-.member-pocket .member-pocket-bottom h1.member-pocket-img {
+.admin-member .admin-member-con .admin-member-search form select {
+  flex: 1;
+  
+  border: 2px solid #2be28d;
+}
 
-  background-color: rgb(255, 0, 0);
+.admin-member .admin-member-con .admin-member-search form input {
+  flex: 5;
 
-  width: 300px;
-  height: 300px;
+  font-size: 30px;
+
+  border: 0;
+}
+
+.admin-member .admin-member-con .admin-member-search form input:focus {
+  outline: none;
+  box-shadow: none !important;
+}
+
+.admin-member .admin-member-con .admin-member-search form button {
+
+  flex: 1;
+
+  border: 2px solid #2be28d;
+
+  background-color: #fff;
 
   cursor: pointer;
 }
 
-.member-pocket .member-pocket-bottom h1.member-pocket-img img {
+/* click-search */
+
+.admin-member .admin-member-con .admin-member-click-search {
+  display: flex;
+  gap: 10px;
+
+}
+
+.admin-member .admin-member-con .admin-member-click-search span {
+  font-size: 20px;
+  background-color: #2be28d;
+  color: #fff;
+  
+  padding: 5px;
+  border-radius: 7px;
+  box-sizing: border-box;
+
+  cursor: pointer;
+
+  transition: all 0.3s;
+}
+
+.admin-member .admin-member-con .admin-member-click-search span:hover {
+  background-color: #2be28d;
+  opacity: 0.3;
+}
+
+/* member - list */
+
+.admin-member .admin-member-con .admin-member-list {
+  width: 80%;
+  height: 700px;
+
+  /* border: 1px solid #00f; */
+
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 10px;
+  
+  padding: 20px 0;
+  box-sizing: border-box;
+}
+
+.admin-member .admin-member-con .admin-member-list .member-pocket {
+  /* border: 1px solid  rgb(255, 0, 0); */
+
+  display: flex;
+  gap: 20px;
+  
+  cursor: pointer;
+
+  box-shadow: inset -1px -1px 1px rgb(100, 98, 98);
+  border-radius: 10px;
+  box-sizing: border-box;
+
+  transition: all 0.5s;
+}
+
+.admin-member .admin-member-con .admin-member-list .member-pocket:hover {
+  transform: translate(-5px, -5px);
+}
+
+.admin-member .admin-member-con .admin-member-list .member-pocket .member-img {
+  width: 100px;
+  height: 100px;
+
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.admin-member .admin-member-con .admin-member-list .member-pocket .member-img img {
   width: 100%;
   display: block;
 }
@@ -74,7 +166,9 @@
   top: 0;
   left: 0;
 
-  /* background-color: rgba(243, 41, 41, 0.692); */
+  z-index: 999;
+
+  background-color: rgba(53, 50, 50, 0.692);
 
   display: flex;
   justify-content: center;
@@ -91,6 +185,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  
+
+  padding: 10px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: inset 0 0 2px rgb(82, 80, 80);
+}
+
+.admin-member-modal-con > form {
+  display: flex;
+  gap: 40px;
 }
 
 .admin-member-modal-con > form > ul {
@@ -105,14 +212,37 @@
   display: flex;
 }
 
+.admin-member-modal-con > form > ul > li .admin-member-modal-img {
+  width: 100px;
+  height: 100px;
+}
+
 .admin-member-modal-con > form > ul > li label {
   flex: 1;
 }
 
-.admin-member-modal-con > form > ul > li label input {
+.admin-member-modal-con > form > ul > li input {
   flex: 1;
+
+  border: 0;
+  border-bottom: 1px solid #3d3d3d;
+  box-sizing: border-box;
 }
 
+.admin-member-modal-con > form > ul > li:last-child {
+  display: flex;
+  gap: 10px;
+}
+
+.admin-member-modal-con > form > ul > li > span {
+  border: 1px solid #000;
+  box-sizing: border-box;
+
+  padding: 10px 20px;
+  box-sizing: border-box;
+}
+
+/* --- */
 
 .close {
   position: absolute;
@@ -128,6 +258,9 @@
   cursor: pointer;
 }
 
+
+
+/* paging */
 
 .paging {
   /* border: 5px solid #000; */
