--- a/frontend/src/css/admin/reply/replyModal.css
+++ b/frontend/src/css/admin/reply/replyModal.css
@@ -1,9 +1,7 @@
 /* 모달 창 */
 .admin-reply-modal {
-
   width: 100%;
   height: 100vh;
-
 
   position: fixed;
   top: 0;
@@ -20,7 +18,7 @@
 
 .admin-reply-modal-con {
   background-color: #fff;
-  
+
   flex: 0 1 1200px;
 
   position: relative;
@@ -38,10 +36,7 @@
   box-shadow: inset 0 0 2px rgb(82, 80, 80);
 }
 
-
-
 .admin-reply-modal-con > ul {
-
   overflow-y: auto;
 
   width: 600px;
@@ -58,7 +53,6 @@
   box-sizing: border-box;
 }
 
-
 .admin-reply-modal-con > ul > li {
   padding: 10px;
   border: 1px solid #000;
@@ -67,11 +61,8 @@
 
 .admin-reply-modal-con .admin-reply-contents {
   width: 100%;
-  border: 1px solid #f00;
-
+  /* border: 1px solid #f00; */
 }
-
-
 
 .close {
   position: absolute;
