--- a/frontend/src/css/pay/addPay.css
+++ b/frontend/src/css/pay/addPay.css
@@ -23,7 +23,7 @@
   min-width: 400px;
 }
 
-.payment-container .step > input {
+.payment-container .step input {
   width: 90%;
   margin: 5px 0;
   padding: 10px;
